# dstack

./: .mailmap  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  REUSE.toml  attestation.md  cargo-check-all.sh  cliff.toml  run-tests.sh  run.sh
.github/workflows/: gateway-release.yml  kms-release.yml  rust-sdk-release.yml  rust.yml  sdk.yaml  spdx-check.yml  verifier-release.yml
basefiles/: app-compose.sh  dstack-guest-agent.service  dstack-prepare.service  dstack-prepare.sh  wg-checker.service  wg-checker.sh
basefiles/docker.service.d/: dstack-guest-agent.conf
cc-eventlog/: Cargo.toml
cc-eventlog/src/: codecs.rs  lib.rs  tcg.rs
cert-client/: Cargo.toml
cert-client/src/: lib.rs
certbot/: Cargo.toml
certbot/cli/: Cargo.toml
certbot/cli/src/: main.rs
certbot/src/: acme_client.rs  bot.rs  dns01_client.rs  lib.rs  workdir.rs
certbot/src/acme_client/: tests.rs
certbot/src/bot/: tests.rs
certbot/src/dns01_client/: cloudflare.rs
ct_monitor/: Cargo.toml
ct_monitor/src/: main.rs
docs/: deployment.md  design-and-hardening-decisions.md  dstack-gateway.md  vmm-cli-user-guide.md
docs/security-guide/: cvm-boundaries.md  security-guide.md
dstack-mr/: Cargo.toml
dstack-mr/cli/: Cargo.toml
dstack-mr/cli/src/: main.rs
dstack-mr/src/: acpi.rs  kernel.rs  lib.rs  machine.rs  num.rs  tdvf.rs  util.rs
dstack-mr/tests/: tdvf_parse.rs
dstack-types/: Cargo.toml
dstack-types/src/: lib.rs  mr_config.rs  shared_filenames.rs
dstack-util/: Cargo.toml
dstack-util/src/: crypto.rs  host_api.rs  main.rs  parse_env_file.rs  system_setup.rs  utils.rs
dstack-util/src/system_setup/: config_id_verifier.rs
dstack-util/tests/fixtures/: luks_header_cipher_null.license
gateway/: Cargo.toml  gateway.toml
gateway/dstack-app/: deploy-to-vmm.sh  docker-compose.yaml
gateway/dstack-app/builder/: Dockerfile  README.md  build-image.sh  entrypoint.sh
gateway/rpc/: Cargo.toml
gateway/rpc/proto/: gateway_rpc.proto
gateway/rpc/src/: generated.rs
gateway/src/: admin_service.rs  config.rs  main.rs  main_service.rs  models.rs  proxy.rs  web_routes.rs
gateway/templates/: dashboard.html  rproxy.yaml
guest-agent/: Cargo.toml  dstack.toml
guest-agent/rpc/: Cargo.toml
guest-agent/src/: config.rs  guest_api_service.rs  http_routes.rs  main.rs  models.rs  rpc_service.rs
guest-agent/templates/: dashboard.html
guest-api/: Cargo.toml
guest-api/proto/: guest_api.proto
guest-api/src/: client.rs
host-api/: Cargo.toml  build.rs
host-api/proto/: host_api.proto
host-api/src/: client.rs  lib.rs
http-client/: Cargo.toml
http-client/src/: hyper_vsock.rs  lib.rs  prpc.rs
iohash/: Cargo.toml
iohash/src/: main.rs
key-provider-build/: docker-compose.yaml
key-provider-client/: Cargo.toml
key-provider-client/src/: host.rs  lib.rs
kms/: Cargo.toml  README.md  kms.toml
kms/auth-eth/: .gitignore  hardhat.config.ts  jest.config.js  jest.integration.config.js  package-lock.json  package.json  run-tests.sh
kms/auth-eth-bun/: index.test.ts  index.ts  openapi.json  package.json
kms/auth-mock/: index.test.ts  index.ts  openapi.json  package.json  vitest.config.ts
kms/dstack-app/: compose-dev.yaml  deploy-to-vmm.sh  docker-compose.yaml  entrypoint.sh
kms/rpc/: Cargo.toml
kms/src/: config.rs  crypto.rs  ct_log.rs  main.rs  main_service.rs  onboard_service.rs
load_config/: Cargo.toml
load_config/src/: lib.rs
lspci/: Cargo.toml
lspci/src/: lib.rs
mod-tdx-guest/: Makefile  mod.c  tdcall.S  tdx-guest.h  tdx.h
no_std_check/: Cargo.toml
no_std_check/src/: lib.rs
python/ct_monitor/: ct_monitor.py  pyproject.toml
ra-rpc/: Cargo.toml  prpc-openapi.md
ra-rpc/src/: client.rs  lib.rs  openapi.rs  rocket_helper.rs
ra-tls/: Cargo.toml
ra-tls/src/: attestation.rs  cert.rs  kdf.rs  lib.rs  oids.rs  traits.rs
rocket-vsock-listener/: Cargo.toml
rocket-vsock-listener/src/: lib.rs
scripts/: add-spdx-attribution.py  config-fw.sh
sdk/: README.md  run-tests.sh
sdk/curl/: api-tappd.md  api.md
sdk/go/: README.md  go.mod  go.sum
sdk/js/: README.md  bun.lockb  package.json  test-outputs.js  tsconfig.browser.json  tsconfig.json  tsconfig.node.json
sdk/python/: Makefile  README.md  mypy.ini  pyproject.toml  test_outputs.py
sdk/python/src/dstack_sdk/: __init__.py  dstack_client.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: dstack_client_usage.rs  tappd_client_usage.rs
sdk/rust/src/: dstack_client.rs  ethereum.rs  lib.rs  tappd_client.rs
sdk/rust/tests/: test_client.rs  test_eth.rs  test_tappd_client.rs
sdk/rust/types/: Cargo.toml  README.md
sdk/rust/types/src/: dstack.rs  lib.rs  tappd.rs
sdk/rust/types/tests/: no_std_test.rs
sdk/simulator/: build.sh  dstack.toml  sys-config.json
serde-duration/: Cargo.toml
serde-duration/src/: lib.rs
size-parser/: Cargo.toml  README.md
size-parser/src/: lib.rs
sodiumbox/: Cargo.toml
sodiumbox/src/: lib.rs
supervisor/: Cargo.toml  supervisor.toml
supervisor/client/: Cargo.toml
supervisor/client/src/: lib.rs  main.rs
supervisor/src/: lib.rs  main.rs  process.rs  supervisor.rs  web_api.rs
supervisor/tests/: test-cli.sh  test.sh
tdx-attest/: Cargo.toml
tdx-attest-sys/: Cargo.toml  bindings.h  build.rs
tdx-attest-sys/src/: lib.rs
tdx-attest/src/: dummy.rs  lib.rs  linux.rs
test-scripts/: get-app-key.sh  inspect-cert.sh
verifier/: Cargo.toml  README.md  dstack-verifier.toml  test.sh
verifier/builder/: Dockerfile  build-image.sh
verifier/builder/shared/: builder-pinned-packages.txt  pin-packages.sh  pinned-packages.txt  qemu-pinned-packages.txt
verifier/fixtures/: quote-report.json
verifier/src/: lib.rs  main.rs  types.rs  verification.rs
vmm/: Cargo.toml  venv.sh  vmm.toml
vmm/rpc/: Cargo.toml  build.rs
vmm/src/: app.rs  config.rs  console_v0.html  console_v1.html  guest_api_service.rs  host_api_service.rs  main.rs  main_routes.rs  main_service.rs  one_shot.rs  openapi.rs  setup-user.sh  vmm-cli.py  x25519.js
vmm/ui/: .gitignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
(+81 files in other folders)
