# SPDX-FileCopyrightText: © 2024 Phala Network <dstack@phala.network>
# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cc-eventlog"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
fs-err.workspace = true
hex.workspace = true
scale.workspace = true
serde.workspace = true
serde-human-bytes.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
sha2.workspace = true

[dev-dependencies]
insta.workspace = true
