# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cert-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dstack-types.workspace = true
dstack-kms-rpc.workspace = true
ra-rpc = { workspace = true, features = ["client"] }
ra-tls.workspace = true
serde_json.workspace = true
tdx-attest.workspace = true
