# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-mr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A CLI tool for calculating TDX measurements for dstack images"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
serde-human-bytes.workspace = true
hex = { workspace = true, features = ["std"] }
thiserror.workspace = true
sha2.workspace = true
anyhow.workspace = true
object.workspace = true
hex-literal.workspace = true
fs-err.workspace = true
bon.workspace = true
log.workspace = true
scale.workspace = true

[dev-dependencies]
dstack-types.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
