# SPDX-FileCopyrightText: © 2024 Phala Network <dstack@phala.network>
# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "key-provider-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["net", "io-util"] }
