# SPDX-FileCopyrightText: © 2024 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "load_config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
figment = { workspace = true, features = ["json", "toml"] }
rocket.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
