# SPDX-FileCopyrightText: © 2024 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tdx-attest-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
