# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-mr-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dstack-mr"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dstack-mr.workspace = true
anyhow.workspace = true
hex = { workspace = true, features = ["std"] }
dstack-types.workspace = true
fs-err.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
tracing-subscriber.workspace = true
size-parser.workspace = true
