# SPDX-FileCopyrightText: © 2025 Created-for-a-purpose <rachitchahar@gmail.com>
# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
# SPDX-FileCopyrightText: © 2025 tuddman <tuddman@users.noreply.github.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-sdk"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "This crate provides a rust client for communicating with dstack"
authors = ["Encifher <encifher@rizelabs.io>"]

[dependencies]
alloy = { workspace = true, features = ["signers", "signer-local"] }
anyhow.workspace = true
dstack-sdk-types.workspace = true
bon.workspace = true
hex = { workspace = true, features = ["std"] }
http.workspace = true
http-client-unix-domain-socket = "0.1.1"
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
x509-parser.workspace = true

[dev-dependencies]
dcap-qvl.workspace = true
tokio = { workspace = true, features = ["full"] }
