# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-sdk-types"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "This crate provides rust types for communication with dstack"
authors = ["Encifher <encifher@rizelabs.io>"]

[dependencies]
anyhow.workspace = true
bon.workspace = true
borsh = { workspace = true, optional = true }
hex = { workspace = true, features = ["alloc"] }
pkcs8 = { workspace = true, features = ["pem"] }
serde.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
sha2.workspace = true

[dev-dependencies]
dcap-qvl.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
default = ["std"]
borsh = ["dep:borsh"]
borsh_schema = ["borsh", "borsh/unstable__schema"]
std = [
    "anyhow/std",
    "bon/std",
    "hex/std",
    "pkcs8/pem",
    "serde/std",
    "serde_json/std",
    "sha2/std",
    "borsh?/std",
]
